Fix header and banner image positioning
 - Header position absolute on top (to appear above banner)
 - Body top padding 5rem to push content below header when no banner
 - Banner position relative (to push other content below it) and bottom
 margin 5rem (to cancel out body padding)

--- a/stylus/main.css
+++ b/stylus/main.css
@@ -51,10 +51,13 @@ h2 {
   background-color: LightBlue;
   border-radius: 1rem;
 }
+body {
+  padding-top: 5rem;
+}
 .header {
   display: flex;
-  position: absolute;
   width: 100%;
+  position: absolute;
   top: 0;
 }
 .calls-to-action {
@@ -78,11 +81,12 @@ h2 {
   font-weight: bold;
 }
 .wt_banner {
+  width: 100%;
   height: 100vh;
+  margin-top: -5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: -1;
 }
 .wt_banner-message {
   margin-left: 10rem;
